fix: mutableList로 변경